# DirSyncService

./: .gitignore  LICENCE.md  README.md  client.py  main.py  pyproject.toml  server.py  test_server.py
filehandler/: __init__.py
