[tool.poetry]
name = "dirsyncservice"
version = "0.1.0"
description = ""
authors = ["Per Buer <per.buer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.7"
click = "^7.1.2"
python-multipart = "^0.0.5"
requests = "^2.24.0"
aiofile = "^3.0.0"
aiofiles = "^0.5.0"
watchdog = "^0.10.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
pudb = "^2019.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
